# Onnx

./: .gitignore  .gitmodules  CMakeLists.txt  Onnx.code-workspace  OnnxObject.cpp  OnnxObject.hpp  OnnxUGen.cpp  OnnxUGen.hpp  README.md
Onnx/: Onnx.sc  Onnx.scx
Onnx/HelpSource/: Onnx.schelp  RTNeural.schelp
Onnx/python/: 4Osc.onnx  gru_torch.onnx  gru_torch.py  lstm2.onnx  lstm_to_onnx.py  mlp.onnx  mlp_control.py  model.pt  onnx_by_hand.py  predict_4Osc.py  predict_LSTM.py  report_dynamo_export.sarif
onnxruntime_dylib/lib/: libonnxruntime.dylib
onnxruntime_dylib/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
onnxruntime_dylib/lib/pkgconfig/: libonnxruntime.pc
onnxruntime_no/lib/libonnxruntime.1.19.0.dylib.dSYM/Contents/: Info.plist
